Update VOCUS 2022-07-27 patch

--- a/_posts/2022-07-26-VOCUS-step-與-步-行步-踏-踩-跨-跨足-伐步-跡-踏板-階-踏階-台階-級-級調-驟步-逐步-測步-繼-後-異-等橋接.html
+++ b/_posts/2022-07-26-VOCUS-step-與-步-行步-踏-踩-跨-跨足-伐步-跡-踏板-階-踏階-台階-級-級調-驟步-逐步-測步-繼-後-異-等橋接.html
@@ -72,8 +72,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">overstep：越級；越階；過越限度；超過準標；越超級等；越限級階；過越適當一般；越超型態一般。</span>此字中內含的 step 有部份意思可能比較特殊。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">steppe：少樹之平原</span>，意指「樹木很少的平原」，其中 t 代表 tree<span style="font-weight: bold; ">；荒原；荒野；草原龐；草原大；草原龐野。</span>此字與前述 step 一字關係不大。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">two-step：二拍；二拍節；二拍版；二拍調；二步；二步舞；二拍舞；二拍蹈；二拍節舞蹈；二拍調舞步。</span>據說是源自公元 1893 年的一種舞曲或舞步形式的名稱，或寫爲 2step，其中的 step 意思也可能較特殊。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Z_MvkyuOJgk"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Z_MvkyuOJgk"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/Z_MvkyuOJgk" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/Z_MvkyuOJgk</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Ed Sheeran- 2step (feat.Lil Baby) - [Official Video] / 分享自 YouTube】(P.S. 其中 feat. 可能有「附帶；附參；附加；友誼助陣；串場；介引；力推」等含意，是指主唱者邀請另一位歌手在整首歌曲中也演唱一段來串場或助陣。)</span></div>
-<div class="draft-block draft--p left"></div>
