--- a/_posts/2022-07-26-VOCUS-洞-20世紀的地洞探險家們.html
+++ b/_posts/2022-07-26-VOCUS-洞-20世紀的地洞探險家們.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6e4eed4a-fa19-4d42-ab82-970ed86180df.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">導演弗拉馬蒂諾拍攝扭曲黑暗的深淵洞穴、與面對未知仍向前的探險者、最後是從過去就陪伴洞窟的老牧人，三者作為一個20世紀的時代變遷，用故事中角色的行為動作映射出他所要表達的含意：「原生在土地上的洞穴正在被侵入，當探險者繪製出洞穴地圖後，代表一種對該地的殖民化，而一直看著洞穴的原民卻無法抵抗此種被摸透的命運。」</div>
 <div class="draft-block draft--p left">即使如今許多殖民文化留下來的濫觴依舊存在，而隨著一代又一代這些傷疤好像成了自然，這也讓《洞》並非只是單純的仿紀錄片與探險電影，而有更多故事值得讓人深思。但是也因藝術性的太過純粹，很難吸引人去了解甚至觀看，畢竟有些事情如像洞穴般抽象支線蔓延，就可惜無法讓太多人去懂，這也是這類電影的難處，有時讓人立即能懂也是種了不得的超能力。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/zftPxPBnrCM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/zftPxPBnrCM"></iframe></div>
