--- a/_posts/2022-07-26-PQ-泰國總理挺過任期內最後一次不信任案.html
+++ b/_posts/2022-07-26-PQ-泰國總理挺過任期內最後一次不信任案.html
@@ -16,7 +16,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254.jpg" alt="" class="wp-image-109191" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254-300x192.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254-768x491.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>帕拉育及10位內閣成員在2022年7月23日安然挺過國會針對他們發起的不信任投票。<br>帕拉育本人以 256 票對 206 票挺過不信任案投票之外，副總理普拉威（Prawit Wongsuwon）及其他8位內閣成員也因執政黨的國會優勢安全度過。<br>圖／Bangkok Post</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254.jpg" alt="" class="wp-image-109191" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254-300x192.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/da98d2ff-4380254-768x491.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>帕拉育及10位內閣成員在2022年7月23日安然挺過國會針對他們發起的不信任投票。<br>帕拉育本人以 256 票對 206 票挺過不信任案投票之外，副總理普拉威（Prawit Wongsuwon）及其他8位內閣成員也因執政黨的國會優勢安全度過。<br>圖／Bangkok Post</figcaption></figure></div>
 
 
 
