--- a/_posts/2022-07-26-INMEDIA-湯家驊獲金紫荊星章-事先張揚獲嘉許-多謝香港人.html
+++ b/_posts/2022-07-26-INMEDIA-湯家驊獲金紫荊星章-事先張揚獲嘉許-多謝香港人.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_227.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>政府公布授勳名單，行政會議成員、資深大律師湯家驊獲得金紫荊星章。行政署要求傳媒在周三（27日）凌晨零時一分後才可報道，但湯家驊在周二（26日）下午6點09分已在Facebook 發帖，稱萬分感謝各位朋友的關心和祝賀，事先張揚獲嘉許稱「多謝香港人！多謝林鄭特首和李特首給我機會進一步服務社會！」湯家驊及後刪除帖文。</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_227.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>政府公布授勳名單，行政會議成員、資深大律師湯家驊獲得金紫荊星章。行政署要求傳媒在周三（27日）凌晨零時一分後才可報道，但湯家驊在周二（26日）下午6點09分已在Facebook 發帖，稱萬分感謝各位朋友的關心和祝賀，事先張揚獲嘉許稱「多謝香港人！多謝林鄭特首和李特首給我機會進一步服務社會！」湯家驊及後隱藏帖文，至凌晨才重新開放帖文。</p>
 <p><strong>湯家驊：從政從來也非追求掌聲，更莫論什麼嘉許</strong></p>
-<p>行政署周二下午4時透過政府新聞處，發布2022授勳及委任太平紳士名單，強調屬限時發放，即在周三才可報道。湯家驊在周二傍晚卻率先發帖，稱感謝朋友的關心和祝賀，更指「從政從來也非追求掌聲，更莫論什麼嘉許」。他又表示，工作與付出得到任何形式的認同是好事，但不會影響其堅持和努力，「我會一如既往，專心我的工作，回饋社會由一名貧窮小子到今天給我的一切」，但他最後刪除帖文。</p>
+<p>行政署周二下午4時透過政府新聞處，發布2022授勳及委任太平紳士名單，強調屬限時發放，即在周三才可報道。湯家驊在周二傍晚卻率先發帖，稱感謝朋友的關心和祝賀，更指「從政從來也非追求掌聲，更莫論什麼嘉許」。他又表示，工作與付出得到任何形式的認同是好事，但不會影響其堅持和努力，「我會一如既往，專心我的工作，回饋社會由一名貧窮小子到今天給我的一切」，他最後隱藏帖文，至凌晨才重新開放帖文。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M0b1T260xR" title="湯家驊"><img src="https://live.staticflickr.com/65535/51369118891_ea555f3a5c_b.jpg" width="1024" alt="湯家驊" /></a></p>
 <p>今次授勳名單共有889人，當中25人獲得金紫荊星章，多名現屆司局長榜上有名，包括政務司司長陳國基、財政司副司長黃偉綸、文化體育及旅遊局局長楊潤雄、政制及內地事務局局長曾國衞、財經事務及庫務局局長許正宇，和保安局局長鄧炳強等。</p>
 <p><strong>新聞稿：湯家驊表現卓越、貢獻殊多</strong></p>
