--- a/_posts/2022-07-26-PQ-晶片大國夢也清零-嚴厲封城重創中國半導體產業.html
+++ b/_posts/2022-07-26-PQ-晶片大國夢也清零-嚴厲封城重創中國半導體產業.html
@@ -32,7 +32,7 @@ author: 蔡侯塞
 
 
 
-<p>先進晶片設計和製造仍落後於海外競爭對手的中國正在投資來減少對外國晶片的依賴。但這並不容易，尤其是車用等級的晶片對製造的要求尤其嚴格。一位中國車廠高階主管表示，微控制器（MCU）佔汽車晶片總成本的 30% 左右，也是中國最難實現自給自足的領域。中國晶片商主要是生產用於空調和座椅控制的晶片。</p>
+<p class="pqnote">先進晶片設計和製造仍落後於海外競爭對手的中國正透過投資和補助國內晶片產業來減少對外國晶片的依賴。但這並不容易，尤其是車用等級的晶片對製造的要求尤其嚴格。一位中國車廠高階主管表示，微控制器（MCU）佔汽車晶片總成本的 30% 左右，也是中國最難實現自給自足的領域。中國晶片商主要是生產用於空調和座椅控制的晶片。</p>
 
 
 
