--- a/_posts/2022-07-26-PQ-美國徹查重要地點及飛彈發射井周邊電信基地台的華為設備.html
+++ b/_posts/2022-07-26-PQ-美國徹查重要地點及飛彈發射井周邊電信基地台的華為設備.html
@@ -24,7 +24,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-1024x812.png" alt="德國兩大電信：核心零組件淘汰華為" class="wp-image-14610" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-1024x812.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-300x238.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-768x609.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）.png 1226w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>川規拜隨！美國政府持續淘汰華為<br>圖／報呱製圖</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-1024x812.png" alt="德國兩大電信：核心零組件淘汰華為" class="wp-image-14610" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-1024x812.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-300x238.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）-768x609.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2019/11/0a071c0c-（圖／）.png 1226w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>川規拜隨！美國政府持續淘汰華為<br>圖／報呱製圖</figcaption></figure></div>
 
 
 
