Update VOCUS 2022-07-28 patch

--- a/_posts/2022-07-27-VOCUS-書本之外-國歌大挑戰.html
+++ b/_posts/2022-07-27-VOCUS-書本之外-國歌大挑戰.html
@@ -12,7 +12,5 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">真正的書寫意義、提筆價值，乃是為了自己的人生不留遺憾，更能夠隨時做好與外界有效溝通、正確陳述的預備。戴上耳機，泡杯蜂蜜檸檬茶，看那歌詞裡所蘊含的力量跟穿透力，即使在「疾速動眼」的web3.0爆炸時代，聽著各國國歌響起，竟是如此充滿魅力……母親的歌、父親的詞、我的故鄉。</span></blockquote>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b8be8a26-88c6-45ca-8b2c-be112f8fc652.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「國歌」，顧名思義，一國之歌、國之頌歌，是代表一國文化與民族色彩的樂曲，被政府與相關領導機關正式承認(收錄於憲法等)，或是在傳統(競技賽事、國際交流)上被國民普遍吟唱的歌曲，</span>詞曲中一般都帶有讚揚風土民情、弘揚愛國主義或闡述國族歷史之精神，可以說是透過歌聲來宣揚軟性國力。又由於政治因素或各種考量，今日有<span style="font-weight: bold; ">四個國家</span>的國歌雖然已經有填詞入曲，但正式場合時多半只演奏國歌旋律，而不演唱歌詞，包括<span style="font-weight: bold; ">西班牙《皇家進行曲》、聖馬利諾《共和國國歌》、科索沃《歐洲》跟波赫的《連音符》</span>。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/-k1L-t7q3j4"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/-k1L-t7q3j4"></iframe></div>
 <div class="draft-block draft--p left">現存年代最久遠，也是最早被訂定為一國之歌的，是......</div>
