--- a/_posts/2022-07-27-INMEDIA-涉8.31點火燒公園封鎖帶30歲被告判囚6個月-官指行為能引-連鎖反應.html
+++ b/_posts/2022-07-27-INMEDIA-涉8.31點火燒公園封鎖帶30歲被告判囚6個月-官指行為能引-連鎖反應.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/07271400-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名30歲人士涉於前年8月31日在太子一個公園內，企圖用打火機燃燒一條橙色封鎖帶，被控「企圖縱火」罪。被告早前被裁罪名成立，今（27日）在西九龍裁判法院被判監6個月。裁判官李志豪判刑指，認為當時社會氣氛被告的行為能引起在場人士連鎖反應，「可以好似火咁一發不可收拾」，因此判處監禁6個月。</p>
+<img src="https://www.inmediahk.net/files/column_images/07271400-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名30歲侍應涉於前年8月31日在太子一個公園內，企圖用打火機燃燒一條橙色封鎖帶，被控「企圖縱火」罪。被告早前被裁罪名成立，今（27日）在西九龍裁判法院被判監6個月。裁判官李志豪判刑指，認為當時社會氣氛被告的行為能引起在場人士連鎖反應，「可以好似火咁一發不可收拾」，因此判處監禁6個月。</p>
 <p>被告李傲妍（現30歲）被控於2020年8月31日，在九龍太子水渠道與西洋菜南街的一個公園內，無合法辯解而企圖用火損壞屬於香港特別行政區政府的財產，即該公園內的橙色封鎖帶，意圖損壞該財產或罔顧該財產是否會被損壞。</p>
 <p>辦方今日進一步求情指，被告現時與家人相處融洽，希望法庭能考慮其父親及被告本人的身體狀況，以及事件中無人或物件受傷害，考慮輕判。</p>
 <p>裁判官李志豪判刑時則指，認為本案「無特別求情因素可言」，指企圖縱火和縱火無分別，屬嚴重控罪。李官又指，考慮當時的社會氣氛，認為被告行為能引起在場人士的「連鎖反應」，「可以好似火勢咁一發不可收拾」。在考慮被告背景及其父親身體情況後，李官以6個月作量刑起點，判處監禁6個月。</p>
