--- a/_posts/2022-07-27-PQ-安倍的非洲遺產-加強日非關係的開拓者.html
+++ b/_posts/2022-07-27-PQ-安倍的非洲遺產-加強日非關係的開拓者.html
@@ -20,7 +20,7 @@ author: 李熱葵
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-1024x525.png" alt="" class="wp-image-49901" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-1024x525.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-300x154.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-768x394.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）.png 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>安倍於 2013 年發起非洲商業教育倡議（簡稱 ABE 倡議），向非洲政府官員、私營部門的個人和學者提供數千名獎學金，供其前往日本大學學習和實習（圖／日本政府）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-1024x525.png" alt="" class="wp-image-49901" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-1024x525.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-300x154.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）-768x394.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/01/4dbee648-日本-非洲-（圖／日本政府）.png 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>安倍於 2013 年發起非洲商業教育倡議（簡稱 ABE 倡議），向非洲政府官員、私營部門的個人和學者提供數千名獎學金，供其前往日本大學學習和實習（圖／日本政府）</figcaption></figure>
 
 
 
