--- a/_posts/2022-07-28-INMEDIA-體育界30人無一獲授大紫荊-林大輝-或未達政府標準.html
+++ b/_posts/2022-07-28-INMEDIA-體育界30人無一獲授大紫荊-林大輝-或未達政府標準.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W0R8xU11gP" title="8B79C9C8-66D1-46E5-89C4-5EA7A98F7F0F"><img src="https://live.staticflickr.com/65535/51719684685_b5842b56a5_b.jpg" width="1024" alt="8B79C9C8-66D1-46E5-89C4-5EA7A98F7F0F" /></a></p>
 <p><strong>從無體育界獲頒大紫荊 林大輝：可能未達政府標準</strong></p>
 <p>被問及從沒有體育界人士獲頒授最高榮譽的大紫荊勳章，林大輝就指如果有業內人士的傑出表現達到政府的標準，政府就應該頒授大紫荊勳章，「可能政府宜家個標準覺得未到呢個水平啦。」他又稱體育界與金融、會計、法律等界別一樣是專業人士，大家均需長時間磨練，今次得獎已是苦盡甘來，只要不斷努力會再獲獎的機會。</p>
-<p>主持人陳志雲就反駁指，覺得專業運動員的犧牲特別大，將最旺盛的年紀委身體育專業，退役後更可能要轉行。林大輝則稱「咁呢個行業喺世界上不同城市都一樣㗎啦」，並不是香港的特性，所以不時建議政府為退役運動員制訂出路計劃。他又指現時精英運動員退役後可領取一定的退休金，建議政府多協助他們轉營及再就業。</p>
+<p>主持人陳志雲就反駁指，覺得專業運動員的犧牲特別大，將最旺盛的年紀委身體育專業，退役後更可能要轉行。林大輝則稱「咁呢個行業喺世界上不同城市都一樣㗎啦」，並不是香港的特性，所以不時建議政府為退役運動員制訂出路計劃。他又指現時精英運動員退役後可領取一定的退休金，建議政府多協助他們轉型及再就業。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/HFkCy375cs" title="無標題"><img src="https://live.staticflickr.com/65535/52210502923_9a981ff603_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>稱體育令社會和諧 望《施政報告》多著墨</strong></p>
 <p>李家超政府上任近一個月，並將於10月19日發表任內首份《施政報告》，林大輝指政府對體育的重視程度仍「言之過早」，但希望政府於報告中提出協助年輕運動員、提升香港體育文化、推動學界體育的政策。他又強調體育對社會發展十分重要，「社會撕裂喎，唔夠團結喎，民心就唔回歸，咁社會好似發展得唔和諧喎。其實體育有股軟實力可以團結社會、凝聚人心，締造社會和諧。」</p>
