--- a/_posts/2022-07-28-INMEDIA-體育界30人無一獲授大紫荊-林大輝-或未達政府標準.html
+++ b/_posts/2022-07-28-INMEDIA-體育界30人無一獲授大紫荊-林大輝-或未達政府標準.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/20220728ss.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府日前公佈前行政長官林鄭月娥的889人頒授勳銜名單，香港代表隊因在東京奧運創歷史佳績，有<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E9%80%BE30%E5%90%8D%E9%AB%94%E8%82%B2%E7%95%8C%E6%8E%88%E5%8B%B3-%E6%9D%8E%E6%85%A7%E8%A9%A9%E5%BC%B5%E5%AE%B6%E6%9C%97%E7%AD%89%E4%BA%BA%E7%8D%B2%E9%8A%80%E7%B4%AB%E8%8D%8A%E6%98%9F%E7%AB%A0">逾30名運動員及教練獲授勳</a>，包括男子花劍金牌金牌得主張家朗獲頒銀紫荊星章。對於體育界從未有人獲授最高榮譽的大紫荊勳章，香港體育學院主席林大輝今早在電台節目認為是「可能政府宜家個標準覺得未到呢個水平啦」。</p>
 <p><strong>運動員勳銜不同？林大輝：不掌握授勳標準</strong></p>
-<p>香港在東奧奪得1金、2銀、3銅，創歷屆最好成績，惟男子花劍金牌得主張家朗只獲頒銀紫荊星章，連續於100米、200米自由游奪兩銀的何詩蓓及兩屆奧運均有牌的「牛下女車神」李慧詩亦同獲銀紫荊星章。獲女子乒乓球團體銅牌的蘇慧音、杜凱琹、李皓晴，以及空手道人形摘銅的劉慕裳則僅獲榮譽勳章，反而體院主席林大輝今年就獲頒金紫荊星章。</p>
+<p>香港在東奧奪得1金、2銀、3銅，創歷屆最好成績，惟男子花劍金牌得主張家朗只獲頒銀紫荊星章，連續於100米、200米自由泳奪兩銀的何詩蓓及兩屆奧運均有牌的「牛下女車神」李慧詩亦同獲銀紫荊星章。獲女子乒乓球團體銅牌的蘇慧音、杜凱琹、李皓晴，以及空手道人形摘銅的劉慕裳則僅獲榮譽勳章，反而體院主席林大輝今年就獲頒金紫荊星章。</p>
 <p>林大輝今早接受商台《在晴朗的一天出發》電話訪問，指作為體育界一分子亦已十分鼓舞，但指自己並不掌握授勳標準，只有政府才掌握，相信授勳及非官守太平紳士遴選委員會有一定提名及審核程序。</p>
 <p>他又強調授勳目的是表揚對香港的貢獻及在其範疇內出類拔萃的成就，「可能今次得獎嘅顏色唔係好似你哋公眾人士預計咁，但唔代表將來唔會再次得獎。」他認為授勳是肯定及表揚了運動員的成就，讓他們可以更努力奮鬥，提升了體育界的士氣，有利之後推動體育發展。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W0R8xU11gP" title="8B79C9C8-66D1-46E5-89C4-5EA7A98F7F0F"><img src="https://live.staticflickr.com/65535/51719684685_b5842b56a5_b.jpg" width="1024" alt="8B79C9C8-66D1-46E5-89C4-5EA7A98F7F0F" /></a></p>
