--- a/_posts/2022-07-28-PQ-日本前防衛大臣率團訪台-石破茂-繼承安倍遺志和台灣具體合作.html
+++ b/_posts/2022-07-28-PQ-日本前防衛大臣率團訪台-石破茂-繼承安倍遺志和台灣具體合作.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91.jpg" alt="" class="wp-image-109410" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>總統蔡英文與副總統賴清德今日上午接見由日本跨黨派國會議員組成的「思考日本安全保障議員之會」訪台團，成員包括日本前防衛大臣石破茂、前防衛大臣濱田靖一、前防衛副大臣長島昭久、參議院總務會副會長清水貴之／圖：總統府提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91.jpg" alt="" class="wp-image-109410" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/a6b481ec-8974-4a80-9d6f-6523d148fd91-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>總統蔡英文與副總統賴清德今日上午接見由日本跨黨派國會議員組成的「思考日本安全保障議員之會」訪台團，成員包括日本前防衛大臣石破茂、前防衛大臣濱田靖一、前防衛副大臣長島昭久、參議院總務會副會長清水貴之／圖：總統府提供。</figcaption></figure></div>
 
 
 
