--- a/_posts/2022-07-28-INITIUM-四问mirror演唱会严重事故-演唱会制作单位有何背景-删减预算是否原因.html
+++ b/_posts/2022-07-28-INITIUM-四问mirror演唱会严重事故-演唱会制作单位有何背景-删减预算是否原因.html
@@ -8,14 +8,16 @@ tags: blog
 author: 袁慧妍,余美霞
 ---
 
-<p>「MIRROR首个红馆演唱会意外频生，第四场更有悬空的大屏幕掉落，砸伤5名舞蹈员，当中2人须送院。到底人命何价？」</p><p>端传媒记者 余美霞、袁慧妍 特约撰稿人 叶家润 实习记者 尹宝盈、郑敏婷、陈洛荞 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220729-whatsnew-mirror-concert-accident/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/e4a9d32093c046abaef761d34388279c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月25日，MIRROR演唱会在香港红磡体育馆展开。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年7月25日，MIRROR演唱会在香港红磡体育馆展开。<span class="credit">摄：Tyrone Siu/Reuters/达志影像</span></figcaption></figure><p>7月28日，香港跳唱男子组合MIRROR在红磡体育馆举行第四场演唱会。至晚上10点半左右，舞台中央一块悬空的大屏幕突然掉落，砸伤5个舞蹈员，其中2人须送院治理。MIRROR的经理人黄慧君（花姐）事后上台道歉，宣布演唱会腰斩。</p>
+<p>「MIRROR首个红馆演唱会意外频生，第四场更有悬空的大屏幕掉落，事件中5人受伤，当中3人须送院。到底人命何价？」</p><p>端传媒记者 余美霞、袁慧妍 特约撰稿人 叶家润 实习记者 尹宝盈、郑敏婷、陈洛荞 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220729-whatsnew-mirror-concert-accident/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/e4a9d32093c046abaef761d34388279c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月25日，MIRROR演唱会在香港红磡体育馆展开。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年7月25日，MIRROR演唱会在香港红磡体育馆展开。<span class="credit">摄：Tyrone Siu/Reuters/达志影像</span></figcaption></figure><p>7月28日，香港跳唱男子组合MIRROR在红磡体育馆举行第四场演唱会。至晚上10点半左右，舞台中央一块悬空的大屏幕突然掉落，事件中5人受伤，其中3人须送院治理。MIRROR的经理人黄慧君（花姐）事后上台道歉，宣布演唱会腰斩。</p>
 <p>根据网上片段，事发时MIRROR成员吕爵安（Edan）及卢瀚霆（Anson Lo）正在表演，但头顶一块大屏幕逐渐松脱，及后整块垂直堕下，砸中底下一名舞蹈员的头部，该舞蹈员马上倒地。屏幕着地后再压住另一名舞蹈员。现场歌迷情绪激动，尖叫声不断，后在主办方指示下离场。</p>
+<p>两名受伤的舞蹈者分别为阿Mo（李启言）、阿Fung（张梓峰）。伊利沙伯医院（伊院）指，两名男伤者中，一人颈部受伤，情况严重；另一人头部受伤，情况稳定。有港媒据现场消息报导，其中一名被击中的伤者初步怀疑头部受伤，头后部亦见伤势，疑脊椎及盆骨受伤，清醒度及血压下降；另一名伤者则盆骨骨折或脊椎受伤。</p>
+<p>警方表示，28日晚上10时许接获多人报案，指红磡体育馆内一个约4米乘4米乘0.2米的萤幕，意外松脱并掉落。事件造成1名姓李（27岁）男职员头、颈受伤；1名姓张（29岁）男职员额头受伤，送往伊院治理时清醒。此外，3名女子分别姓叶（21岁）、陈（40岁）及康（16岁）女子，因感到身体不适，其中叶女亦需送往伊院治理。事发后，约1万人自行疏散。另外，九龙城警区重案组已接手跟进事件，调查意外原因。</p>
 <p>香港注册机械工程师、理工大学机械工程学系前工程师卢觉强向《英文虎报》<a href="https://www.thestandard.com.hk/breaking-news/section/4/192858/Mirror-concert-accident-%27a-fortune-out-of-misfortune%27:-expert?fbclid=IwAR2Ck3j6SmbvsNwJCl_53c4OUBJ12OrJfYr3eyz8UO_kD1LxG-JfP-zJQVA">形容</a>，事故为“不幸之中的大幸”。他解释，该屏幕约重90公斤，高10米，“如果用角撞到舞者，将产生708磅力量”，不能排除导致舞者死亡。</p>
 <p>但他补充，由于屏幕先是撞到地面，然后“像斧头一样碾向舞者”，故此所产生的力量只有预料的三分之一。</p>
 <p>事故发生以后，所有粉丝群组均在集气，希望伤者平安无事。其中不少人更留言，希望主办方把演唱会给腰斩掉，不想再有意外发生。目前因应意外，政府已指示演唱会要暂停举行，直至舞台结构证实安全。</p>
 <p>意外后约4小时，主办单位“MakerVille”于IG<a href="https://www.instagram.com/p/CgkMCJZPo-z/?igshid=YmMyMTA2M2Y=">宣布</a>，余下所有演唱会场次将会取消，同时亦向观众及其他受影响人士致歉，并安排持有是次演唱会门票的观众凭票退款。</p>
-<p>“MakerVille”行政总裁鲁庭晖于凌晨亦<a href="https://www.youtube.com/watch?v=ULkcmdTsqXA">现身</a>医院探望伤者，并就事件鞠躬道歉，称会尽力帮伤者及其家人。伤者Momo（李启言）正在深切治疗部接受治疗，目前清醒，能与医生沟通；另一伤者阿Fung（张梓峰）则受轻伤，涉及损伤及肌肉拉伤。鲁庭晖承诺会查明原因，但处理需时；又指现阶段尽力协助伤者及其家属。</p>
+<p>“MakerVille”行政总裁鲁庭晖于凌晨亦<a href="https://www.youtube.com/watch?v=ULkcmdTsqXA">现身</a>医院探望伤者，并就事件鞠躬道歉，称会尽力帮伤者及其家人。他当时交代指，伤者阿Mo正在深切治疗部接受治疗，目前清醒，能与医生沟通；另一伤者阿Fung则受轻伤，涉及损伤及肌肉拉伤。鲁庭晖承诺会查明原因，但处理需时；又指现阶段尽力协助伤者及其家属。</p>
 <p>相关事故片段在网络上疯传，亦有现场观众表示情绪未能平复。红十字会表示已因应状况启动“Shall We Talk”心理支援热线（电话+852 5164 5040，服务时间至7月29日中午12时正），为有需要人士提供情绪支援。服务由已受相关训练的职员及义工提供，并由临床心理学家作出专业支援。市民亦可以WhatsApp短讯+852 5164 5040或Telegram@hkrcshallwetalk预约服务。</p>
 <p>艺人古天乐亦在IG呼吁停止发放或转发令人不安的片段，并全面关注及检视今后所有台前幕后演出的安全问题。</p>
 <p>到底谁是负责是次演唱会制作的有关部门？缺漏是如何发生？在事件中的受伤的舞蹈员们，又为何对演唱会安排表示不满？</p>
@@ -23,13 +25,13 @@ author: 袁慧妍,余美霞
 <figcaption itemprop="caption">2022年7月28日，香港，MIRROR演唱会进行期间，巨型显示屏突然从高处跌下，击中台上的舞蹈员。<span class="credit">网上图片</span></figcaption></figure>
 
 <h2>问一︰受伤的舞蹈员是谁？</h2>
-<p>受伤送院的伤者是Anson Lo的两名伴舞Momo及阿Fung。其中伴舞Momo是MIRROR团队及Anson Lo个人歌曲的常驻伴舞，现龄27岁，在2020年起为Anson Lo伴舞，曾参与个人单曲《一所悬命》、《King Kong》、《Mr. Stranger》、《Megahit》等MV舞蹈。</p>
-<p>Momo同时是多间香港舞蹈室的编舞师，如Crewplayer、Dance Lifestyle studio、Nexus Dance Studio等，在舞蹈行内甚有名气，其Instagram有逾35万人追踪。他曾参加《全民造星》的初选，并在55强止步。在事发后，也有网民到当时ViuTv的Facebook宣传帖子留言，为仍在留院的Momo打气。</p>
+<p>受伤送院的伤者是Anson Lo的两名伴舞阿Mo及阿Fung。其中伴舞阿Mo是MIRROR团队及Anson Lo个人歌曲的常驻伴舞，现龄27岁，在2020年起为Anson Lo伴舞，曾参与个人单曲《一所悬命》、《King Kong》、《Mr. Stranger》、《Megahit》等MV舞蹈。</p>
+<p>阿Mo同时是多间香港舞蹈室的编舞师，如Crewplayer、Dance Lifestyle studio、Nexus Dance Studio等，在舞蹈行内甚有名气，其Instagram有逾35万人追踪。他曾参加《全民造星》的初选，并在55强止步。在事发后，也有网民到当时ViuTv的Facebook宣传帖子留言，为仍在留院的阿Mo打气。</p>
 <p>他另一个较为人熟悉的身份是香港女子团队COLLAR成员So Ching（苏芷晴）的男友。事发后网民亦涌入她的Instagram留言，但So Ching未有公开回应，COLLAR亦已取消明天所有活动。</p>
-<p>早前MIRROR演唱会彩排发生伴舞人员受伤意外后，Momo亦曾发布黑图的限时动态，疑加入应援及对舞台机关不满。今晚再现事故，两小时内已有逾千人涌入他最近的帖子中留言打气。</p>
-<p>另一名伤者阿Fung在Momo被高空屏幕击中后隔不足几秒，被屏幕压倒在地。他是一名Urban舞者，在2Live Dance Studio、SGM Dance Studio等多间舞蹈室任教。</p>
+<p>早前MIRROR演唱会彩排发生伴舞人员受伤意外后，阿Mo亦曾发布黑图的限时动态，疑加入应援及对舞台机关不满。今晚再现事故，两小时内已有逾千人涌入他最近的帖子中留言打气。</p>
+<p>另一名伤者阿Fung在阿Mo被高空屏幕击中后隔不足几秒，被屏幕压倒在地。他是一名Urban舞者，在2Live Dance Studio、SGM Dance Studio等多间舞蹈室任教。</p>
 <p>与其他MIRROR的伴舞成员一样，他与MIRROR成员关系不俗，在7月28日第四场演出前，曾与姜涛合照，表示“今晚一齐Good show”，但不幸在演出中遇到意外。事故发生后，他的未婚妻亦在社交媒体上写到“唔明点解会发生呢啲事（不明白为何会发生这些事）”，疑似表达对是次意外的不满。</p>
-<p>另一名在事故后被传受伤的伴舞Beep则透过社交媒体澄清及“报平安”，并为在演出中受伤的Momo及Fung打气。截稿为止，在事故时演唱的Anson Lo暂未作任何回应，而MIRROR成员中，Anson Kong（江𤒹生）则贴出黑图，其他成员未有再更新个人帐号。</p>
+<p>另一名在事故后被传受伤的伴舞Beep则透过社交媒体澄清及“报平安”，并为在演出中受伤的阿Mo及Fung打气。截稿为止，在事故时演唱的Anson Lo暂未作任何回应，而MIRROR成员中，Anson Kong（江𤒹生）则贴出黑图，其他成员未有再更新个人帐号。</p>
 <p>事后，多名艺人在社交媒体上发布黑图限时动态，为受伤的两名伴舞者集气，包括香港另一男子组合ERROR成员肥仔（梁业）、阿Dee（何启华）、歌手林家谦、张敬轩、郑秀文、郑欣宜等。张敬轩亦发文，希望大家“先为伤者祈祷”，并请照顾好身边目睹事件经过的朋友。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220729-whatsnew-mirror-concert-accident/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/a9ef7fc01bc949f494fa7e45f7c79d04.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月28日，香港，MIRROR演唱会进行期间，巨型显示屏突然从高处跌下，击中台上的舞蹈员，图为堕下的显示屏。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年7月28日，香港，MIRROR演唱会进行期间，巨型显示屏突然从高处跌下，击中台上的舞蹈员，图为堕下的显示屏。<span class="credit">网上图片</span></figcaption></figure>
@@ -63,7 +65,7 @@ author: 袁慧妍,余美霞
 <p>意外发生后，花姐在台上呼吁观众离场，表示会安全处理是次演唱会。惟有在场观众大叫<a href="https://www.hk01.com/%E7%AA%81%E7%99%BC/797768/mirror%E6%BC%94%E5%94%B1%E6%9C%83-%E8%8A%B1%E5%A7%90%E8%87%B4%E6%AD%89%E7%B1%B2%E9%9B%A2%E5%A0%B4-%E8%A7%80%E7%9C%BE%E5%8F%AB%E7%BD%B5-%E5%A4%AA%E9%9B%A2%E8%AD%9C%E5%96%87-%E6%97%A5%E6%97%A5%E9%83%BD%E4%BF%82%E5%92%81">回应</a>，“不会原谅你”、“你还说安全？太离谱了！日日都是这样！”</p>
 <p>日前，经常在演唱会上劲歌热舞的郭富城接受传媒访问，以自身经验直指MIRROR成员只有2天彩排的时间并不充足，而场务同事更有责任提醒演出者有关舞台的危险位置。此外，他又说如果发生问题，要由歌手自己解决是“不合理”。</p>
 <p>曾在红馆表演和工作的资深音乐人阿赞（化名）向端传媒表示，一般而言娱乐公司会先找总监制负责整个演唱会流程，监制会与公司订立演唱会主题，再分派工作，例如找音乐总监和舞台公司负责所属部分，“通常先做好音乐、与舞蹈员沟通，然后再设计灯光。”</p>
-<p>关于事故发生原因，他指彩排时间不足有可能是其中一个因素。以前市道畅旺，公司愿意投放更多资金和资源，相对上彩排时间会更多，表演者和工作人员会更熟习舞台设计。“近年演唱会最惹人诟病的是Cut Budget（删减预算），常常都说Budget不够，比起市道最好的时候，现在删减了约一半。以音乐人为例，会有基本收费和逐个小时收费去计算，减彩排时数就可省钱。我们被剥削得很厉害。”阿赞说。</p>
+<p>关于由彩排到演出接连发生上述事故，他指彩排时间不足有可能是其中一个因素。以前市道畅旺，公司愿意投放更多资金和资源，相对上彩排时间会更多，表演者和工作人员会更熟习舞台设计。“近年演唱会最惹人诟病的是Cut Budget（删减预算），常常都说Budget不够，比起市道最好的时候，现在删减了约一半。以音乐人为例，会有基本收费和逐个小时收费去计算，减彩排时数就可省钱。我们被剥削得很厉害。”阿赞说。</p>
 <p>他举例指，现在一场大型演唱会，例如在红馆举办、可容纳过万观众的表演，筹备时间最快是3至6个月，每场会有30至40首歌，乐队彩排时间大约25至30小时；而不多于5000名观众的小型演唱会，则不超过20小时。“很多时候找回同一批舞蹈员、音乐人，大家合作惯，可减少彩排时数。不过一减少时数，其实是整体受影响，包括减少适应舞台设计和灯光所需的时间。”</p>
 <p>MIRROR演唱会接二连三的意外，引发工伤和保障的讨论。阿赞续称，台前意外令人关注，但幕后意外其实更多，“后台很暗，没什么灯光，我们（包括工作人员、乐师和表演者）都是‘不能见光’，在后台都很小心，一不小心就会掉到舞台的一些凹下去的地方或洞里面。这一行一向不太重视后台安全，我也曾亲眼目睹过后台意外。我常说，不能见光的人，人命是否就不值钱？”</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220729-whatsnew-mirror-concert-accident/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/07/1a3bdedb8330402ba753c01cee1efa65.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年7月25日，MIRROR演唱会在香港红磡体育馆展开。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
