--- a/_posts/2022-07-28-INMEDIA-foodpanda車手身亡僅獲賠1萬-家屬請願促提高工傷保障.html
+++ b/_posts/2022-07-28-INMEDIA-foodpanda車手身亡僅獲賠1萬-家屬請願促提高工傷保障.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p><strong>昨補飛發放額外6.5萬  強調非工作期間保險唔包</strong></p>
 <p>死者姐姐Maria表示，Foodpanda 在意外發生當日，未有派員親身慰問家屬及傾談，只透過電話稱，會給予1萬元緊急支援金。事件其後被廣泛報道，Foodpanda 在昨日知衰「補飛」，通知家屬發放6.5萬元的額外傷亡支援基金，但就一再重申，死者「唔係工作期間出事，申請唔到保險」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8DLB4v6866" title="無標題"><img src="https://live.staticflickr.com/65535/52247163758_e749b296b5_b.jpg" width="1024" alt="無標題" /></a><br /><em>死者姐姐Maria（中）</em></p>
-<p>翻查Foodpanda 保障條款，員工在發生意外期間為上線時間，可申請《團體意外人身保險》賠償。員工若意外死亡、永久完全或部份傷殘，最高賠錢額達36萬元；但如非上線時段出事，就只可獲1萬元慰問金。</p>
+<p>翻查Foodpanda 保障條款，員工在「送遞過程」中發生意外，可申請《團體意外人身保險》賠償。員工若意外死亡、永久完全或部份傷殘，最高賠錢額達36萬元；但如非上線時段出事，就只可獲1萬元慰問金。</p>
 <p><strong>19年入職  因泊位少提早出車</strong></p>
 <p>Maria 對《獨媒》指，弟弟為基層運輸工人，曾任HKTV Mall 貨車送貨員，在2019年才轉任Foodpanda 電單車車手。她重申，弟弟一般的「上線」時間為早上10點，但近日抄牌情況嚴重，加上居住在公屋，電單車泊車位較少，遂提早在8點前出車。</p>
 <p>對於Foodpanda 為員工購買的保險，並不保障非工作時間，Maria 質疑公司制度落後，而且非人性化。除了家屬，多名車手、外賣員權益關注組、工業傷亡權益會等同到Foodpanda 總部請願及遞交信件，他們在遞信前為死者陳德明默哀。</p>
@@ -31,5 +31,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0T88j49Q16" title="右二：外賣員權益關注組成員小唐"><img src="https://live.staticflickr.com/65535/52246178477_1b2bb67c0a_b.jpg" width="1024" alt="右二：外賣員權益關注組成員小唐" /></a><br /><em>外賣員權益關注組成員小唐（右二）</em></p>
 <p><strong>稱與家屬保持密切聯絡  已提供一切可行支援</strong></p>
 <p>Foodpanda 晚上發稿回應指，對交通意外「深表痛心」，對死者家屬致以深切的慰問。Foodpanda 表示，得悉事件發生後與不同部門了解，確定送遞員身份後以電話聯繫家屬，稱和家屬「保持密切聯絡」；指已向家屬提供一切可行支援，包括緊急喪葬援助金、額外身故援助金和後事安排。</p>
-<p>至於是次意外非發生於上線時段，Foodpanda 則指「已積極向保險公司盡全力查詢一切可行補償方案」，並會根據意外的情況酌情處理，為家屬提供緊急喪葬援助金及額外支援。</p>
+<p>至於是次意外非發生於上線時段，Foodpanda 則指「已積極向保險公司盡全力查詢一切可行補償方案」，並會根據意外的情況酌情處理，為家屬提供緊急喪葬援助金及額外支援。Foodpanda 稱，會為每名送遞員免費提供團體意外人身保險，保險覆蓋整個值更時段，包括等待接單時間及暫停更份時間。</p>
 </div></div></div>
