Update VOCUS 2022-07-30 patch

--- a/_posts/2022-07-28-VOCUS-stop-與-停-行中止-定-止-址-止步-站-塞堵-阻-擋-礙-禁止-防-攔-暫停-扣留-光圈-截止-示斷句-等的橋接.html
+++ b/_posts/2022-07-28-VOCUS-stop-與-停-行中止-定-止-址-止步-站-塞堵-阻-擋-礙-禁止-防-攔-暫停-扣留-光圈-截止-示斷句-等的橋接.html
@@ -9,7 +9,6 @@ author: 羅聖爾
 ---
 
 <h2 class="draft-block draft--h2" name="header-3p8bo">完整標題：stop 與「停；行中止；定；止；址；停止；止步；停步；停頓；停擺；停佇；停住；擋下；停下；下停來；停留；逗留；息停；歇停；停泊；停靠；站；停泊站；停靠站；塞堵；塞栓；塞阻；阻止；阻；擋；阻擋；擋住；礙；阻礙；禁止；中止；中斷；阻斷；防；防止；防堵；攔；攔阻；攔下；暫停；躊躇；耽擱；止付；停付；扣留；扣除；扣下；停辦；停工；光圈；截斷；截止；示斷句；至善」等的橋接</h2>
-<h2 class="draft-block draft--h2" name="header-4ok8e"></h2>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2c750b90-af95-4a6f-9f58-986f0e42a1c6.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">【附圖：幾個 stop 意像的表示，包括紅色底加白色文字或圖案的 「STOP」、「線大于平」(水平的粗線)、「四指一拇」、「STOP!」、「斜直偶拼」(ㄨ形符號) 及「紅色燈號」(red light) / 圖片採編自 Unsplash】</span></figcaption></div></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stop = 豎亭和point =丨亭和㇀= 停。</span>漢字「停」在古代字書的記載裡，有「<span style="font-weight: bold; ">行中止</span>」(可能包括「行動中停止」、「行途中停止」、「行至目標位址」) 和「<span style="font-weight: bold; ">定</span>」(定於所在、固定於所在之處) 的意思。巧合的是 stop 也能橋接於漢字「行中止」與「定」，即：<span style="font-weight: bold; ">stop = 行直口ph = 行丨口f = 行中foot = 行中止</span>；<span style="font-weight: bold; ">stop = 雙點偶ph = 二丶二f = II丶一一foot = 宀一止 = 宀一龰 = 定</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stop = 豎直one平 =丨丨一一 = 丨Iㄧ一 = 止</span>。此「止」字類似「停」之意，但也可能是「址」的本字，<span style="font-weight: bold; ">東漢許慎《說文解字》便記載「止，下基也。象艸木出有址，故以止爲足。」</span>，也就是漢字「止」有時意通漢字「址」，有時又意通漢字「足」，所以也可能意通 English 的 address 或 foot。</div>
@@ -70,7 +69,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">stop 這個單字，看起來好像和 step 一字是兄弟或姐妹一般，兩字只差在 e 和 o 的不同。step 的 e 若以大寫 E 來看，好像畫出了一個連續過程中的好幾個階段；stop 的 o 則好像帶有句點的中止意像。頗爲耐人尋味！…… <span style="font-weight: bold; ">(P.S. 參考〈step 與「步；行步；走步；跕步；躡步；踏；踏步；踩；踩步；踩踏；跨；跨步；跨足；跨踩；伐步；跳步；行跳步；行蹈步；行蹈舞；行動移步；行動一步；行動之步；行台步；行踏步；行踏印；踏印；足印；足跡；跡；踏板；階；踏階；台階；階段；級；級踏；階級；級階；級等；級調；驟步；逐步；調步；聲調步；聲調部；聲階；測步；繼；後；後繼；異」等的橋接〉-- </span><a href="https://vocus.cc/article/62df37fdfd897800016c2fed" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/article/62df37fdfd897800016c2fed</span></a><span style="font-weight: bold; ">)</span></div>
 <div class="draft-block draft--p left">漢字古籍<span style="font-weight: bold; ">《禮記.大學篇》的第一段文字寫道「大學之道，在明明德，在親民，在止於至善。知止而后有定，定而后能靜，靜而后能安，安而后能慮，慮而后能得。物有本末，事有終始，知所先後，則近道矣。」</span>，似乎也講到了認知 step 和 stop 兩者的重要性，不過這段文字是把「大學之道」的「止」定義為「至善」(<span style="font-weight: bold; ">stop = st偶平 = stst平 = ㄙ土善兜一 = 至善</span>)，頗爲耐人尋味！…… 難怪，best 一字好像也能同時橋接於漢字「大學之道」與「至善」二詞，即 <span style="font-weight: bold; ">best = 平Es道 = 一L二s道 = 一人ss道 = 大學之道</span>；<span style="font-weight: bold; ">best = lo一善土 = Ldot一善土 = ㄥ點一善土 = ㄥ丶一善土 = 厶一善土 = 至善</span>。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-44aki"><span style="font-weight: bold; ">P.S. 以下列舉的諸單字之字義說明中的 stop 或可選用前述較適合的漢字語義代入，但也可能另有其它較特殊的字義：<br></span></h3>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stopped：stop的；stop爲的；stop被為的；stop被動；stop被做；stop已的；stop矣的；stop已動；stop已做；stop矣動；stop矣做；stop完動；stop完做；stop了；stop完了；stop已了。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stopping：stop的；stop樣；stop之樣；stop之樣子；stop之名動；stop於正；stop於將；stop之事；stop之物；stop之事物；stop之用；stop之用具；stop之工具；stop之能技。</span></div>
@@ -86,12 +84,9 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">unstop：除stop；去stop；除去stop；去除stop</span>。多指「除去塞堵」、「去除塞栓」之類。相關單字還有 unstopped、unstoppable。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stopping distance：險撞重避的距離</span>，意指「避免發生嚴重相撞之危險的距離」<span style="font-weight: bold; ">；安全的距離；安全反應距離；刹停安全距離；刹車安全距離。</span>此語中的 stopping 意思可能較特殊。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">stop press：截止聞新</span>，意指「截稿前後纔收到並急迫地編入報導的新聞」<span style="font-weight: bold; ">；急迫聞新；塞補報導；新補息消</span>，意通「新近補入的消息」<span style="font-weight: bold; ">；近聞；插播</span>。此爲報紙或新聞報導用語，其中的 stop 意思也較特殊。事實上，press (報；播；播報；報導；報紙；聞新；記者；版出；印刷；印行；.…..) 一字同時也有「迫近」、「迫急」或「迫緊」的內涵。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/5JD6ejmlpa8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/5JD6ejmlpa8"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/5JD6ejmlpa8" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/5JD6ejmlpa8</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Spice Girls - Stop / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/X4BN-VY_5Bs"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/X4BN-VY_5Bs"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/X4BN-VY_5Bs" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/X4BN-VY_5Bs</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Stop - Spice Girls (Lyrics) / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
