--- a/_posts/2022-07-28-PQ-金正恩不帶頭銜直稱-尹錫悅-警告韓美升溫局勢必付出代價.html
+++ b/_posts/2022-07-28-PQ-金正恩不帶頭銜直稱-尹錫悅-警告韓美升溫局勢必付出代價.html
@@ -24,7 +24,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044.png" alt="" class="wp-image-109459" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044-768x512.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>金正恩在紀念活動演說中直呼韓國總統尹錫悅名諱，展現對韓國的敵意。<br>（圖／朝中社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044.png" alt="" class="wp-image-109459" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/07/71161c34-img_5044-768x512.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>金正恩在紀念活動演說中直呼韓國總統尹錫悅名諱，展現對韓國的敵意。<br>（圖／朝中社）</figcaption></figure></div>
 
 
 
