--- a/_posts/2022-07-29-PQ-拜習通話聚焦台海-有加料無共識.html
+++ b/_posts/2022-07-29-PQ-拜習通話聚焦台海-有加料無共識.html
@@ -40,7 +40,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275.jpeg" alt="" class="wp-image-95132" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國總統拜登（右）2022年3月18日與中國國家主席習近平視訊通話，表達對北京在台海脅迫與挑釁行為的擔憂。<br>圖／WhiteHouse
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275.jpeg" alt="" class="wp-image-95132" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/60fc9629-2000x1333_0181419656275-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國總統拜登（右）2022年3月18日與中國國家主席習近平視訊通話，表達對北京在台海脅迫與挑釁行為的擔憂。<br>圖／WhiteHouse
 </figcaption></figure></div>
 
 
