--- a/_posts/2022-07-29-INMEDIA-mirror演唱會-協興隆發聲明-指涉事鋼纜由總承建商藝能指定供應商製造.html
+++ b/_posts/2022-07-29-INMEDIA-mirror演唱會-協興隆發聲明-指涉事鋼纜由總承建商藝能指定供應商製造.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p>另外，提供涉事屏幕的 In Technical Productions (ITP) ，亦於晚上發聲明，澄清他們只負責提供合適及合規的視訊器材，並安裝到主承辦商提供及指定的結構工程上，而沒有參與有關放置巨型懸空屏幕的結構、懸掛鋼索的制作，以及其機械工程的運作。</p>
 <p>ITP於聲明指，公司自2009年開始提供視像顯示解決方案服務，並一直非常重視其下項目的職業安全監督，務求保護其下項目員工、服務對象及觀眾的安全。他們對有舞蹈員受傷感到非常震驚和難過，謹此對所有受傷舞蹈藝員及其家屬表達最深切慰問，並希望受傷者能夠早日康復。</p>
 <p><strong>以下為協興隆舞台工程有限公司的聲明全文：</strong></p>
-<p>致各位傳媒</p>
+<blockquote><p>致各位傳媒</p>
 <p>對於昨晚（7 月 28 日）MIRROR.WEARE 演唱會發生嚴重意外事故，造成多名表演者受傷，本公司深表關注，更感到十分震驚及惋惜；對所有傷者致以最深切慰問並冀望他們早日康復。</p>
 <p>就今次事件，本公司隨即與各單位及律師團隊溝通、了解，有鑑於網上傳言眾多，現特此澄清聲明。本公司是透過總承辦商藝能工程有限公司負責是次演唱會連工包料製造及安裝以下舞台工程部分：</p>
 <p> 1. 5 組角位升降台<br />
@@ -26,14 +26,14 @@ author: 獨媒報導
 <p>本公司承諾會與總承辦商藝能工程有限公司及其指定供應商，積極配合主辦單位及政府各相關部門徹底調查意外成因。</p>
 <p>最後，本公司再次向受傷的表演者及其家屬致以深切慰問，冀望早日康復。</p>
 <p>協興隆舞台工程有限公司</p>
-<p>2022 年 7 月 29 日</p>
+<p>2022 年 7 月 29 日 </p></blockquote>
 <p><strong>以下為In Technical Production Holdings Limited的聲明全文：</strong></p>
-<p>就於2022年7月28日晚假香港體育館舉行的Mirror演唱會發生的嚴重意外，導致有舞蹈藝員受傷，本公司感到非常震驚和難過。我們謹此對所有受傷舞蹈藝員及其家屬表達最深切慰問，並希望受傷者能夠早日康復。</p>
+<blockquote><p>就於2022年7月28日晚假香港體育館舉行的Mirror演唱會發生的嚴重意外，導致有舞蹈藝員受傷，本公司感到非常震驚和難過。我們謹此對所有受傷舞蹈藝員及其家屬表達最深切慰問，並希望受傷者能夠早日康復。</p>
 <p>為釋除公眾疑慮，本公司特此澄清，作為視像顯示解決方案服務供應商，本公司就Mirror演唱會承辦的工作部份只包括提供合適及合規的視訊器材並安裝到主承辦商提供及指定的結構工程上，而沒有參與任何有關放置巨型懸空屏幕的結構和懸掛鋼索的制作及其機械工程的運作。</p>
 <p>本公司自2009年開始提供視像顯示解決方案服務，並一直非常重視其下項目的職業安全監督，務求保護其下項目員工、服務對象及觀眾的安全。</p>
 <p>本公司再一次誠心祝願所有因今次意外不幸受傷的人士早日康復。</p>
 <p>此致<br />
 楊浩廷先生<br />
 In Technical Production Holdings Limited<br />
-執行董事</p>
+執行董事 </p></blockquote>
 </div></div></div>
