--- a/_posts/2022-07-30-INITIUM-在香港默默爆肝的动画师们-港产动画还是只有20年前的-麦兜-吗.html
+++ b/_posts/2022-07-30-INITIUM-在香港默默爆肝的动画师们-港产动画还是只有20年前的-麦兜-吗.html
@@ -17,7 +17,7 @@ author: 特约撰稿人 凌梓鎏 发自香港
 <iframe width="100%" height="312px" src="https://www.youtube.com/embed/898lylQx_ZY" frameborder="0" allowfullscreen> </iframe>
 </figure>
 
-<p>五分钟MV击中香港人集体记忆、晦暗处境与奋发心志，水准之高，背后却只是由两家小型动画——合共不过十多人——仅仅于两个半月中一起爆肝做成。须知这种2D手绘动画，一秒需画8至12格画面，前期还要设计角色和场景、做故事分镜等。牵头的动画师吴启忠（Tommy）当时向好友Step招手求助，Step虽然在忙别的案子，但还是伸出援手。</p>
+<p>五分钟MV击中香港人集体记忆、晦暗处境与奋发心志，水准之高，背后却只是由两家小型动画室——合共不过十多人——仅仅于两个半月中一起爆肝做成。须知这种2D手绘动画，一秒需画8至12格画面，前期还要设计角色和场景、做故事分镜等。牵头的动画师吴启忠（Tommy）当时向好友Step招手求助，Step虽然在忙别的案子，但还是伸出援手。</p>
  
  
  
