--- a/_posts/2022-07-29-INMEDIA-大角咀教會冷氣開放予市民避暑-研另闢地點供-無針者-使用.html
+++ b/_posts/2022-07-29-INMEDIA-大角咀教會冷氣開放予市民避暑-研另闢地點供-無針者-使用.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p>宣道堂一直提供長者派飯服務。「夏日避暑處」首先開放予前來領盒飯的長者，後來更邀請區內清潔工到教會乘涼休息。Mary提到，為幫助更多有需要的人士，一眾同工將到街上接觸更多有需要人士，邀請他們到教會乘涼。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/U3gK32GbQ3" title="無標題"><img src="https://live.staticflickr.com/65535/52248557751_36c5f3e73b_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>「零針」長者無法進入教會 坐在門口乘涼</strong></p>
-<p>但在疫苗通行證實施下，進入教會同需「打足三針」和使用「安心出行」。部分街坊因沒有接種疫苗，只能坐在門口，或由同工協助在門口交收餐盒。門口位置的冷氣較弱，有同工特意將風扇風向轉至門口，讓無法進內的街坊也能乘涼。Mary對此表示無奈，「唔喺我唔俾你入嚟呀，喺香港政府唔俾你入嚟呀」。</p>
+<p>但在疫苗通行證實施下，進入教會同需「打足三針」和使用「安心出行」。部分街坊因沒有接種疫苗，只能坐在門口，或由同工協助在門口交收餐盒。門口位置的冷氣較弱，有同工特意將風扇風向轉至門口，讓無法進內的街坊也能乘涼。</p>
 <p>坐在門口處等候領取餐盒的好婆婆因為「零針」而無法進內。Mary指，好婆婆於「夏日避暑處」開放第一天曾進入教會乘涼，同工無法請她離開，只好讓她休息一陣子。往後，同工便擺放一張椅子在門外，讓她坐在門外享受從教會內吹出的微微涼風。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8D9a5B0270" title="好婆婆"><img src="https://live.staticflickr.com/65535/52248846334_1976f0b33b_b.jpg" width="1024" alt="好婆婆" /></a><br /><em>好婆婆</em></p>
 <p>82歲的關婆婆同未有打針，她解釋稱早前遇上車禍，休養半年仍未康復，憂慮疫苗副作用會加劇腰部舊患，故至今仍未接種。關婆婆曾在大角咀居住近20年，雖然早前已搬至九龍灣，但因對大角咀有感情，閒時會回到宣道堂。關婆婆又提到，與丈夫同住的家中只有風扇，沒有冷氣，故不介意坐在教會門口乘涼。被問到會否擔心長途跋涉，往返兩區時會中暑，她笑說：「平時帶兩樽水，咁就唔怕中暑啦！」</p>
