--- a/_posts/2022-07-31-VOCUS-如果能夠把謝謝說出口-母親與我.html
+++ b/_posts/2022-07-31-VOCUS-如果能夠把謝謝說出口-母親與我.html
@@ -40,4 +40,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">我覺得這本《如果能夠把謝謝說出口》不是什麼工具書等級的漫畫內容，有很多都是看見作者本人的牢騷，和母親對待家人的任性，甚至書名雖然展現出作者本人想告知母親的話，但實際上如同作者不斷在書中表示的：「實際狀況遠不如想像中美好」真實癌症故事不是泡泡的偶像劇，它有太多實際面要考量。</div>
 <div class="draft-block draft--p left">漫畫裡給予讀者的是一個你可能得做好這些準備，跟即使你跟你家人關係不太良好，在進行兒女的照顧義務中，你們可以拿捏到多少分寸，有時候不是全天候待命才是對於家人最好的距離，保持距離和私人空間也是一種溫柔。作者與作者母親之間的態度，也許可以讓所有在關係不好也不壞的現代家庭有所啟發。</div>
 <div class="draft-block draft--p left">謝謝這個詞不一定要說出口，如何陪伴到最後遠過於萬語。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/eWCFsF9iBTI"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/eWCFsF9iBTI"></iframe></div>
