--- a/_posts/2022-07-30-INMEDIA-mirror演唱會-楊潤雄-需花數星期調查-紅館可續辦靜態表演.html
+++ b/_posts/2022-07-30-INMEDIA-mirror演唱會-楊潤雄-需花數星期調查-紅館可續辦靜態表演.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/%E6%A5%8A%E6%BD%A4%E9%9B%84%2001%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>MIRROR周四紅館演唱會發生嚴重事故，懸空屏幕墮下並砸中兩名舞蹈員。文化體育及旅遊局長楊潤雄在電台節目表示，由康文署領導的小組將就技術層面調查，報告約需花費數星期完成，希望公眾予當局時間。至於紅館8月中將舉辦演唱會，他稱康文署將連絡主辦方，又認為較靜態、舞台設計簡單的表演可續辦，「企喺度、坐喺度唱吓歌⋯相對上我哋覺得可以繼續做落去。」</p>
+<img src="https://www.inmediahk.net/files/column_images/%E6%A5%8A%E6%BD%A4%E9%9B%84%2001%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>MIRROR周四紅館演唱會發生嚴重事故，懸空屏幕墮下並砸中兩名舞蹈員。文化體育及旅遊局長楊潤雄在電台節目表示，由康文署領導的小組將就技術層面調查，報告約需花費數星期完成，希望公眾予當局時間。至於紅館8月中將舉辦演唱會，他稱康文署將連絡主辦方，又認為較靜態、舞台設計簡單的表演可續辦，「企喺度、坐喺度唱吓歌……相對上我哋覺得可以繼續做落去。」</p>
 <p><strong>指調查將須花數星期完成 將審視所有康文署場地演出活動<strong></strong></strong></p>
 <p>楊潤雄昨曾到紅館<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%A5%8A%E6%BD%A4%E9%9B%84%E8%A6%96%E5%AF%9F%E7%B4%85%E9%A4%A8-%E7%A8%B1%E8%AA%B0%E4%BA%BA%E8%A6%81%E8%B2%A0%E8%B2%AC%E3%80%8C%E8%A8%80%E4%B9%8B%E5%B0%9A%E6%97%A9%E3%80%8D">了解情況</a>，指目前追究負責是「言之尚早」，須待調查完成。他今早接受商台節目《政經星期六》訪問，稱據了解涉事大型屏幕有兩條鋼索，其中一條脫落而釀成意外。他指，當局將調查用料和工程設計，認為屏幕可以轉動和升降，操作上容易發生意外。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7hB6u1be2S" title="圖片來源：商業電台"><img src="https://live.staticflickr.com/65535/52250482408_26e81c9655_b.jpg" width="1024" alt="圖片來源：商業電台" /></a><br /><em>圖片來源：商業電台</em></p>
