--- a/_posts/2022-08-01-VOCUS-只為住宿而成行的花蓮廟口獨旅.html
+++ b/_posts/2022-08-01-VOCUS-只為住宿而成行的花蓮廟口獨旅.html
@@ -8,7 +8,6 @@ tags: blog
 author: 陳政佑
 ---
 
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-a6a26">花蓮廟口，只為住宿成行的旅程</h3>
 <div class="draft-block draft--p left">　　約莫從半年前開始，養成了收藏社群推薦景點的習慣，標記在地圖上，期待哪天有機會造訪，接觸<a href="https://onelittleday.com.tw/miaokohostel/" target="_blank" class="draft--a">《小日子》</a>上介紹<a href="https://www.facebook.com/miaokohostel" target="_blank" class="draft--a">Miaoko Hostel</a>的文章也是在那段期間，<span style="font-weight: bold; ">內心深深被照片裡的環境氛圍所吸引</span>，便暗自決定找時間去住上一晚。<br>　　無奈當時還沒畢業，忙著做實驗，也忙著準備考試，沒時間安排旅遊，結果就這樣拖延到六月底，依舊沒規劃，僅僅訂好住宿跟火車票，考完第二次托福的隔天，趨身踏上這趟旅程。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/05b69b97-3211-4081-a773-db3fe57b73a9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">花蓮火車站</figcaption></div></div>
@@ -42,10 +41,7 @@ author: 陳政佑
 <h3 class="draft-block draft--h3" name="header-3rsdm">期待再訪花蓮，同塊土地兩樣情</h3>
 <div class="draft-block draft--p left">　　就這樣，這次旅程大致上結束了，很高興來住過Miaoko Hostel，下次還想來花蓮玩，走走不同景點，<span style="font-weight: bold; ">之後絕對會騎機車</span>。在歸還腳踏車後，回到多數觀光客的行程，走趟東大門夜市，路上買公正包子、鋼管紅茶跟花蓮大西瓜汁。<br>　　對我來說，花蓮是個特別的城市，雖然有美麗的海景，卻也有了無生氣的工業區，不管是經過，或從環保公園看過去，與自然不搭嘎的鐵皮，都很辣眼。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ad1c27fb-4862-4211-b899-93cc6bb41209.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">環保公園看出去的工廠</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.flickr.com/photos/191540671@N07/albums/72177720300948455"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.flickr.com/photos/191540671@N07/albums/72177720300948455"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">追蹤我的臉書粉專→</span><a href="https://www.facebook.com/brainhavemouth" target="_blank" class="draft--a">https://www.facebook.com/brainhavemouth</a> <br><span style="font-weight: bold; ">追蹤我的唉居粉專→</span><a href="https://instagram.com/brainhasmouth?igshid=YmMyMTA2M2Y=" target="_blank" class="draft--a">https://instagram.com/brainhasmouth?igshid=YmMyMTA2M2Y=</a></div>
 <h2 class="draft-block draft--h2" name="header-f8lb0"><span style="font-weight: bold; ">喜歡我的文章按讚追蹤加分享！或是斗內起來！</span></h2>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">也能在留言處提出你的看法喔！</span></div>
-<div class="draft-block draft--p left"></div>
